--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "apollo-boost": "^0.4.9",
+    "cross-fetch": "^3.1.4",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.6.1"
   }
 }
